# pileup-hi

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
pileuphi_bin/: Cargo.toml
pileuphi_bin/src/: args.rs  main.rs
pileuphi_lib/: Cargo.toml  build.rs
pileuphi_lib/src/: alignment.rs  bamio.rs  baq.rs  basedepth_string.rs  cigar_resolve.rs  engine.rs  errors.rs  jobqueue.rs  lib.rs  output.rs  overlap.rs  params.rs  pileup_iterator.rs  pileup_string.rs  position_queue.rs  read_buf.rs  read_filter.rs  refseq.rs  threading.rs
src/: alignment.rs  bamio.rs  baq.rs  basedepth_string.rs  cigar_resolve.rs  engine.rs  errors.rs  main.rs  output.rs  overlap.rs  overlap_wrapper.c  params.rs  pileup.rs  pileup_iterator.rs  pileup_string.rs  pileup_writer.rs  plp_iter.rs  plp_writers.rs  position_queue.rs  read_buf.rs  read_filter.rs  read_walker.rs  realign_report.rs  realigner.rs  refseq.rs  rpileup.rs  threading.rs  utils.rs
stream_example/: Cargo.toml
stream_example/src/: args.rs  main.rs
test/: mpileup.reg  regression.sh
test/expected/: 4.out  5.out
test_data/: anomalous.bam  anomalous.cram  c1.fa.fai  indels.bam  indels.cram  mp_2018.fa.fai  mpileup.1.cram  mpileup.1.cram.crai  mpileup.1.sam  mpileup.2.cram  mpileup.2.cram.crai  mpileup.3.cram  mpileup.3.cram.crai  mpileup.reg  overlap50.bam  overlap50.cram  regression.sh  test.bam  xx#depth1.bam  xx#depth1.bam.bai  xx#depth2.bam  xx#depth2.bam.bai  xx#depth3.bam  xx#depth3.bam.bai
