[package]
name = "pileup-hi"
version = "0.9.2"
edition = "2021"
authors = ["Eli Piliper <epiliper@outlook.com>"]
description = "CLI program to generate varying pileup-derived output formats for SAM and BAM"
license-file = "LICENSE"
homepage = "https://github.com/epiliper/pileup-hi"
categories = ["science", "bam", "bioinformatics", "command-line-utilities"]
keywords  = ["bam", "sequencing", "bioinformatics", "variant"]
readme = "README.md"
exclude = ["vendor/*"]

[[bin]]
name = "pileuphi"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.32"

[badges]
maintenance = { status = "actively_developed" }

[dependencies]
pileuphi_lib = { path = "../pileuphi_lib" , features = ["cli"]}
log = "0.4.29"
tikv-jemallocator = "0.5"
env_logger = "0.11.8"
